fix border-radius on small resolution

--- a/frontend/src/styles/CurrentWeather.module.scss
+++ b/frontend/src/styles/CurrentWeather.module.scss
@@ -4,8 +4,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #202b3b;
-  border-radius: 30px;
 
   .location {
     text-align: left;
@@ -47,7 +45,7 @@
   .container {
     margin-top: 0.5rem;
     flex-direction: column;
-    border-radius: 15px;
+    border-radius: 20px;
 
     .location {
       text-align: center;
