--- a/frontend/src/styles/SearchBar.module.scss
+++ b/frontend/src/styles/SearchBar.module.scss
@@ -22,6 +22,6 @@
 
 @media (max-width: 768px) {
   .container {
-    border-radius: 15px;
+    border-radius: 20px;
   }
 }
