--- a/frontend/src/styles/TodayForecast.module.scss
+++ b/frontend/src/styles/TodayForecast.module.scss
@@ -36,7 +36,7 @@
 @media (max-width: 768px) {
   .container {
     margin-top: 0.5rem;
-    border-radius: 15px;
+    border-radius: 20px;
 
     .list {
       flex-wrap: wrap;
